# pdf-indexer-mcp

./: .gitignore  IMPROVEMENT_PLAN.md  MANIFEST.in  PUBLISHING.md  README.md  STUDENT_INITIATIVES.md  __init__.py  pyproject.toml  requirements.txt  semantic_chunked_pdf_rag.py
chunking/: __init__.py  header_based.py  s2_chunking.py
database/: __init__.py  models.py  operations.py
embeddings/: __init__.py  faiss_index.py  generator.py
pdf_processing/: __init__.py  extractor.py  validator.py
utils/: __init__.py  logger.py
